--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -98,7 +98,7 @@
                         </div>
                         
                         <div class="container gallery-container">
-                            <h1 text-align:center>Notice Board</h1>
+                            <h1 text-align:center>নোটিশ বোর্ড</h1>
                             <form action="/pd/dashImageFormPost" id="FieldTrialForm" class="form-horizontal" method="post"  role="form" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <label >নতুন নোটিশের টাইটেল</label>
