--- a/views/pd/employee/chak1/employeeChak1Table.ejs
+++ b/views/pd/employee/chak1/employeeChak1Table.ejs
@@ -28,8 +28,8 @@
                 <td><%= row.presentDate %></td>
                 <td><%= row.pastWorkstation %></td>
                 <td><%= row.comment %></td>
-                <td><a class="btn btn-primary btn-xs" href="/center/chak1Edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/center/chak1Delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/pd/chak1Edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/chak1Delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
