--- a/views/pd/employee/chak2/employeeChak2Table.ejs
+++ b/views/pd/employee/chak2/employeeChak2Table.ejs
@@ -20,8 +20,8 @@
                 <td><%= row.working %></td>
                 <td><%= row.shunno %></td>
                 <td><%= row.comment %></td>
-                <td><a class="btn btn-primary btn-xs" href="/center/chak2Edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/center/chak2Delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/pd/chak2Edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/chak2Delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
