--- a/views/pd/employee/chak1/employeeChak1Edit.ejs
+++ b/views/pd/employee/chak1/employeeChak1Edit.ejs
@@ -1,8 +1,8 @@
-<%- include('../../includes/header')-%>
+<%- include('../../../includes/header')-%>
         <div class="wrapper">
-          <%- include('../../includes/topbar')-%>
+          <%- include('../../../includes/topbar')-%>
             <div class="page-wrap">
-              <%- include('../../includes/sidebar')-%>
+              <%- include('../../../includes/sidebar')-%>
               <div class="main-content">
                 <div class="container-fluid">
                     <div class="row clearfix">
@@ -17,28 +17,83 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/pd/newPodobiEditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/pd/chak1EditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
                                     </div>
-
-                                        
+                                    
                                     <div class="form-group">
-                                        <label for="podobi" class="col-md-3 control-label">পদবী</label>
+                                        <label for="center" class="col-md-3 control-label">হর্টিকালচার সেন্টারের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="podobi" placeholder="<%= records.podobi %>">
+                                            <input type="text" class="form-control" name="center" value="<%= records.center %>" >
                                         </div>
                                     </div>
                                     
-                                    <div class="form-group">
-                                        <label for="grade" class="col-md-3 control-label">গ্রেড</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="grade" placeholder="<%= records.grade %>">
-                                        </div>
-                                    </div> 
 
-                                    
+                                    <div class="form-group">
+                                        <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম ও মোবাইল নং</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="kormokorta" value="<%= records.kormokorta %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="porichito" class="col-md-3 control-label">পরিচিতি নং</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="porichito" value="<%= records.porichito %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="nijDistrict" class="col-md-3 control-label">নিজ জেলা</label>
+                                        <div class="col-md-9">
+                                        <input type="text" class="form-control" name="nijDistrict" value="<%= records.nijDistrict %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="podobi" class="col-md-3 control-label">পদবী</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="podobi" value="<%= records.podobi %>">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="birthDate" class="col-md-3 control-label">জন্ম তারিখ</label>
+                                        <div class="col-md-9">
+                                            <input type="date" class="form-control" name="birthDate" value="<%= records.birthDate %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="firstdate" class="col-md-3 control-label">চাকুরীতে প্রথম যোগদানের তারিখ</label>
+                                        <div class="col-md-9">
+                                            <input type="date" class="form-control" name="firstdate" value="<%= records.firstdate %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="presentDate" class="col-md-3 control-label">বর্তমান কর্মস্থলে যোগদানের তারিখ</label>
+                                        <div class="col-md-9">
+                                        <input type="date" class="form-control" name="presentDate" value="<%= records.presentDate %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="pastWorkstation" value="<%= records.pastWorkstation %>">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
+                                        <div class="col-md-9">
+                                            <input type="text" class="form-control" name="comment" value="<%= records.comment %>">
+                                        </div>
+                                    </div>
+
+                                    <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
                                     
                                     <div class="form-group">
                                         <!-- Button -->                                        
@@ -58,4 +113,4 @@
             </div>
         </div>
     </div>
-<%- include('../../includes/footer')-%>
+<%- include('../../../includes/footer')-%>
