--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,10 +60,13 @@
                 
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">হোম</a></li>
-                    <li><a class="smoothscroll"  href="#about" title="about">চারা কলম তালিকা</a></li>
                     <li><a class="smoothscroll"  href="#services" title="services">আমাদের সম্পর্কে</a></li>
-                    <li><a class=""  href="/center/allCenterInfo" title="contact">যোগাযোগ</a></li>
                     <li><a class=""  href="/center/charaKolomFixed" title="contact">চারা কলমের মূল্য তালিকা</a></li>
+                    <li><a class="smoothscroll"  href="#about" title="about">চারা কলমের মজুদ</a></li>
+                    
+                    <li><a class=""  href="/center/allCenterInfo" title="contact">সেন্টারের যোগাযোগ তথ্য</a></li>
+                    <li><a class="smoothscroll"  href="#contact" title="contact">প্রধান কার্যালয় যোগাযোগ তথ্য</a></li>
+                    
                 </ul>
 
             </div> <!-- end header-nav__content -->
