--- a/views/charaKolomFixed.ejs
+++ b/views/charaKolomFixed.ejs
@@ -42,8 +42,8 @@
     ================================================== -->
     <header class="s-header">
 
-        <div class="header-logo">
-            <a class="site-logo" href="/">
+        <div style="position: fixed;top: 0;" class="header-logo">
+            <a style="position: fixed;top: 0;" class="site-logo" href="/">
                 <img src="/landingPage/images/daelogo.png" alt="DAE">
             </a>
         </div>
