expense center baki

--- a/views/center/dashboard.ejs
+++ b/views/center/dashboard.ejs
@@ -75,7 +75,7 @@
                         </div>
 
                         <div class="container gallery-container">
-                            <h1 text-align:center>Notice Board</h1>
+                            <h1 text-align:center>নোটিশ বোর্ড</h1>
                             
                             <div class="tz-gallery">
                                 <div class="row">
