--- a/views/center/employee/chak2/employeeChak2Edit.ejs
+++ b/views/center/employee/chak2/employeeChak2Edit.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>কর্মকর্তা কর্মচারীদের পদবী ও গ্রেডের তালিকার ফর্ম</h2></div>
+                                <div class="panel-title"><h2>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
@@ -52,12 +52,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label for="shunno" class="col-md-3 control-label">শুন্যপদ</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="shunno" value="<%= records.shunno %>">
-                                        </div>
-                                    </div>
                                     <div class="form-group">
                                         <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                                         <div class="col-md-9">
