--- a/views/pd/employee/chak1/employeeChak1Form.ejs
+++ b/views/pd/employee/chak1/employeeChak1Form.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>ক্যাডার/নন ক্যাডার কর্মকর্তাদের নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>ক্যাডার/নন ক্যাডার কর্মকর্তাদের/কর্মচারী নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
@@ -17,7 +17,7 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/center/chak1Forms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/pd/chak1Forms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
