--- a/views/pd/employee/chak2/employeeChak2Form.ejs
+++ b/views/pd/employee/chak2/employeeChak2Form.ejs
@@ -17,7 +17,7 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/center/chak2Forms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/pd/chak2Forms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -52,12 +52,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label for="shunno" class="col-md-3 control-label">শুন্যপদ</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="shunno" placeholder="শুন্যপদ">
-                                        </div>
-                                    </div>
                                     <div class="form-group">
                                         <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                                         <div class="col-md-9">
