--- a/views/center/employee/chak1/employeeChak1Form.ejs
+++ b/views/center/employee/chak1/employeeChak1Form.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>ক্যাডার/নন ক্যাডার কর্মকর্তাদের নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>ক্যাডার/নন ক্যাডার কর্মকর্তাদের/কর্মচারী নাম ও পদবী সহ শূন্য পদের তথ্য ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
@@ -32,13 +32,13 @@
                             </button>
                         </div>
                     <% } %>
-                                    <div class="form-group">
-                                        <label for="center" class="col-md-3 control-label">হর্টিকালচার সেন্টারের নাম</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="হর্টিকালচার সেন্টারের নাম">
-                                        </div>
-                                    </div>
+
+
+                                            
+                                                    <input type="hidden" class="form-control" name="center" value="<%= centers %>" >
                                     
+                                            
+                                   
 
                                     <div class="form-group">
                                         <label for="kormokorta" class="col-md-3 control-label">কর্মকর্তার নাম ও মোবাইল নং</label>
@@ -91,7 +91,7 @@
                                     <div class="form-group">
                                         <label for="pastWorkstation" class="col-md-3 control-label">পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
+                                            <input type="date" class="form-control" name="pastWorkstation" placeholder="পূর্ববর্তী কর্মস্থল ও যোগদানের তারিখ">
                                         </div>
                                     </div>
 
