--- a/views/center/expense/sag.ejs
+++ b/views/center/expense/sag.ejs
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
-            <th>কোড নং</th>
+        <th>কোড নং</th>
             <th>খাতের নাম</th>
             <th>চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
             <th>জুলাই</th>
@@ -24,13 +24,16 @@
     </tr>
     </thead>
     <tbody>
+        <% console.log(codes) %>
         <% codes.forEach(function(rows){ %>
             <tr>
                 <td><%= rows.code %></td>
                 <td><%= rows.khat %></td>
-                <% records.forEach(function(row){ %>
-                    <% if(rows.code == row.code){ %>
-                        <% console.log("prothom",rows.code,row.code) %>
+                <% console.log("code dekhi",rows.code) %>
+                    <% records.forEach(function(row){ %>
+                        <% console.log("code dekhi",rows.code,row.code) %>
+                        <% if(rows.code==row.code){ %>
+                            <% console.log("code dekhi",rows.code,row.code) %>
                         <td><%= row.boraddo %></td>
                         <td><%= row.july1 %></td>
                         <td><%= row.august1 %></td>
@@ -48,31 +51,15 @@
                         <td><%= row.baki %></td>
                         <td><%= row.comment %></td>
                         <td><a class="btn btn-primary btn-xs" href="/center/expenseAdd/<%= row.id %>"><i class="fa fa-plus"></i></a></td>
-                    <!-- <% }else{ %>
-                        <% console.log("second",rows.code,row.code) %>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td> -->
-
-                    <% } %>
+                        <% }else{ %>
+                        <% }) %>
                 <% }) %>
+               
+                
+                
             </tr>
         <% }) %>
-    </tbody> 
+    </tbody>
 </table>
 <% }else{ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
