--- a/views/center/expense/expenseTable.ejs
+++ b/views/center/expense/expenseTable.ejs
@@ -1,8 +1,8 @@
 <%if (records.length >0){ %>
-    <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+    <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
-            <th>কোড নং</th>
+        <th>কোড নং</th>
             <th>খাতের নাম</th>
             <th>চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
             <th>জুলাই</th>
@@ -20,59 +20,38 @@
             <th>মোট খরচ</th>
             <th>অবশিষ্ট</th>
             <th>মন্তব্য অতিরিক্ত খরচ বেতন</th>
-            <th>যোগ করুন</th>
+            <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
-        <% codes.forEach(function(rows){ %>
+        <% records.forEach(function(row){ %>
             <tr>
-                <td><%= rows.code %></td>
-                <td><%= rows.khat %></td>
-                <% records.forEach(function(row){ %>
-                    <% if(rows.code == row.code){ %>
-                        <% console.log("prothom",rows.code,row.code) %>
-                        <td><%= row.boraddo %></td>
-                        <td><%= row.july1 %></td>
-                        <td><%= row.august1 %></td>
-                        <td><%= row.sept1 %></td>
-                        <td><%= row.oct1 %></td>
-                        <td><%= row.nov1 %></td>
-                        <td><%= row.dec1 %></td>
-                        <td><%= row.jan2 %></td>
-                        <td><%= row.feb2 %></td>
-                        <td><%= row.march2 %></td>
-                        <td><%= row.apr2 %></td>
-                        <td><%= row.may2 %></td>
-                        <td><%= row.june2 %></td>
-                        <td><%= row.total %></td>
-                        <td><%= row.baki %></td>
-                        <td><%= row.comment %></td>
-                        <td><a class="btn btn-primary btn-xs" href="/center/expenseAdd/<%= row.id %>"><i class="fa fa-plus"></i></a></td>
-                    <!-- <% }else{ %>
-                        <% console.log("second",rows.code,row.code) %>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td> -->
-
-                    <% } %>
-                <% }) %>
+                <td><%= row.code %></td>
+                <td><%= row.khat %></td>
+                <td><%= row.boraddo %></td>
+                <td><%= row.july1 %></td>
+                <td><%= row.august1 %></td>
+                <td><%= row.sept1 %></td>
+                <td><%= row.oct1 %></td>
+                <td><%= row.nov1 %></td>
+                <td><%= row.dec1 %></td>
+                <td><%= row.jan2 %></td>
+                <td><%= row.feb2 %></td>
+                <td><%= row.march2 %></td>
+                <td><%= row.apr2 %></td>
+                <td><%= row.may2 %></td>
+                <td><%= row.june2 %></td>
+                <td><%= row.total %></td>
+                <td><%= row.baki %></td>
+                <td><%= row.comment %></td>
+                <td><a class="btn btn-primary btn-xs" href="/center/expenseEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/center/expenseDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                </td>
+                
+               
             </tr>
         <% }) %>
-    </tbody> 
+    </tbody>
 </table>
 <% }else{ %>
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
