--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
                     <li><a class="smoothscroll"  href="#about" title="about">চারা কলমের মজুদ</a></li>
                     
                     <li><a class=""  href="/center/allCenterInfo" title="contact">সেন্টারের যোগাযোগ তথ্য</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">প্রধান কার্যালয় যোগাযোগ তথ্য</a></li>
+                    <li><a class="smoothscroll"  href="#contact" title="contact">প্রধান কার্যালয়ের যোগাযোগ তথ্য</a></li>
                     
                 </ul>
 
