--- a/views/center/employee/chak2/employeeChak2.ejs
+++ b/views/center/employee/chak2/employeeChak2.ejs
@@ -91,10 +91,8 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
     async function exportToPdf() {
-        var year = $('#year').val();
-        var month = $('#month').val();
         var center = $('#center').val();
-        const { data } = await axios.post(`/center/generatePdfchak2`,{year: year,month:month, center:center});
+        const { data } = await axios.post(`/center/generatePdfchak2`,{center:center});
         var mywindow = window.open("", "PRINT", "height=400,width=600");
         mywindow.document.write(data.html);
         mywindow.document.close(); // necessary for IE >= 10
