--- a/views/pd/worker/workerNum/workerNum.ejs
+++ b/views/pd/worker/workerNum/workerNum.ejs
@@ -87,10 +87,9 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
     async function exportToPdf() {
-        var year = $('#year').val();
-        var month = $('#month').val();
+
         var center = $('#center').val();
-        const { data } = await axios.post(`/pd/generatePdfworkerNum`,{year: year,month:month, center:center});
+        const { data } = await axios.post(`/pd/generatePdfworkerNum`,{center:center});
         var mywindow = window.open("", "PRINT", "height=400,width=600");
         mywindow.document.write(data.html);
         mywindow.document.close(); // necessary for IE >= 10
