--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -141,6 +141,9 @@
                 <div class="nav-item">
                     <a href="/center/topSheet"><i class="ik ik-box"></i><span>মাসিক টপশীট</span></a>
                 </div>
+                <div class="nav-item">
+                    <a href="/center/topSheetBitoron"><i class="ik ik-box"></i><span>মাসিক টপশীট (বিতরণ)</span></a>
+                </div>
 
                 <div class="nav-lavel">হিসাব</div>
                 
