--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -35,6 +35,9 @@
                     <div class="nav-item">
                         <a href="/pd/topSheet"><i class="ik ik-box"></i><span>মাসিক টপশীট</span></a>
                     </div>
+                    <div class="nav-item">
+                        <a href="/pd/topSheetBitoron"><i class="ik ik-box"></i><span>মাসিক টপশীট (বিতরণ)</span></a>
+                    </div>
     
                     <div class="nav-lavel">হিসাব</div>
                     
